--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,7 @@
 members = [
   "token-lending/cli",
   "token-lending/program",
-  "token-lending/sdk",
-  "token-lending/brick"
+  "token-lending/sdk"
 ]
 
 [profile.dev]
