--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,14 +1,12 @@
-anchor_version = "0.13.2"
 
 [workspace]
 members = [
-    "token-lending/program",
-    "token-lending/brick",
+    "token-lending/program"
 ]
 
 [provider]
-cluster = "mainnet"
+cluster = "devnet"
 wallet = "~/.config/solana/id.json"
 
 [programs.mainnet]
-spl_token_lending = "So1endDq2YkqhipRh3WViPa8hdiSpxWy6z3Z6tMCpAo"
+spl_token_lending = "F79PAx9W1YX3RSCmEDMqJayTf4M1MdGyV555swtV6fFa"
